add cucumber tests